new btc noteboko

--- a/notebooks/pytorch-exp-cycle-detector.ipynb
+++ b/notebooks/pytorch-exp-cycle-detector.ipynb
@@ -588,10 +588,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Fitting harder cycle problems\n",
+    "I cheated by setting the default period value to 2pi, which is the correct value.\n",
+    "\n",
+    "This will almost certainly fail to converge in a reasonable ammount of time if that initial value is off\n",
+    "\n",
+    "Ideas:\n",
+    "1: Instead of using modulus can I use a \n",
+    "    - `F(X)*G(X) for p in P` where\n",
+    "        - G(X) is a mask function\n",
+    "        - P is total number of periods\n",
+    "    - This could allow for variance in period lengths\n",
+    "    - more differentiable?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
